feat: [CORE] Migrate to Java 20 and Spring Boot 3.