@@ -1,6 +1,5 @@
 package md.fuel.bot.telegram.command;
 
-import static java.util.stream.Collectors.toList;
 import static md.fuel.bot.telegram.utils.ReplyKeyboardMarkupUtil.getFuelTypeKeyboard;
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -38,7 +37,7 @@ public class SpecificFuelInRadiusCommandTest {
 
     final List<SendMessage> messages = specificFuelInRadiusCommand.execute(update).stream()
         .map(m -> (SendMessage) m)
-        .collect(toList());
+        .toList();
 
     assertThat(messages).hasSize(1);
     final SendMessage sendMessage = messages.get(0);
